script/kind-session-persistence/tests/gateway-xbackendpolicy-precedence/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-xbtp-precedence
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - whoami-xbtp-precedence.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-xbtp-precedence
          port: 80
      sessionPersistence:
        type: Header
        sessionName: X-Route-Session
